--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>T2203M Hello</title>
 </head>
 <body>
-    <h2>T2203M Hello </h2>
+    <h1>Welcome to T2203M</h1>
+    <h2>Nhóm 1:</h2>
+        <h3>Nhóm mình gồm 5 thành viên:</h3>
+        <p> 1 . Nguyễn Thị Thúy - Nhóm Trưởng </p>
+        <p> 2 . Đào Trọng Quyết - Thuyết Trình </p>
+        <p> 3 . Lê Thanh Bình - Lớp Trưởng </p>
+        <p> 4 . Mai Xuân Tiến - Trưởng Hội Cao Tuổi</p>
+        <p> 5 . Nguyễn Bá Quốc - Thư Ký .</p>
+
 </body>
 </html>
